--- a/Lands/Lands/Views/LoginPage.xaml
+++ b/Lands/Lands/Views/LoginPage.xaml
@@ -72,6 +72,7 @@
                     BorderRadius="23"
                     Command="{Binding LoginCommand}"
                     HeightRequest="46"
+                    IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                     TextColor="White"
                     Text="Login"
                     VerticalOptions="End">
@@ -80,6 +81,7 @@
                     BackgroundColor="Purple"
                     BorderRadius="23"
                     HeightRequest="43"
+                    IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                     TextColor="White"
                     Text="Register"
                     VerticalOptions="End">
