Video 13 - Filter lands

--- a/Lands/Lands/Views/LandsPage.xaml
+++ b/Lands/Lands/Views/LandsPage.xaml
@@ -8,57 +8,47 @@
         <StackLayout
             BindingContext="{Binding Lands}"
             Padding="5">
-            <ListView 
-                BackgroundColor="Silver"
+            <SearchBar
+                Text="{Binding Filter, Mode=TwoWay}"
+                SearchCommand="{Binding SearchCommand}"
+                Placeholder="Search...">
+                
+            </SearchBar>
+            <ListView
                 HasUnevenRows="true" 
                 IsPullToRefreshEnabled="true"
                 IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
                 ItemsSource="{Binding Lands}"
-                SeparatorVisibility="None"
+                SeparatorVisibility="Default"
                 RefreshCommand="{Binding RefreshCommand}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Frame
-                                CornerRadius="20"
-                                HasShadow="true"
-                                Margin="5">
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding SelectLandCommand}"/>
-                                </Frame.GestureRecognizers>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <ffimageloading:CachedImage 
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <StackLayout 
                                         Grid.Column="0"
-                                        HeightRequest="30"
-                                        Source="{Binding Flag, Converter={StaticResource SvgImageSourceConverter}}"
-                                        WidthRequest="60">
-                                    </ffimageloading:CachedImage>
-                                    <StackLayout 
-                                        Grid.Column="1"
                                         VerticalOptions="Center">
-                                        <Label 
+                                    <Label 
                                             FontAttributes="Bold"
                                             FontSize="Medium" 
                                             Text="{Binding Name}"
                                             TextColor="Black">
-                                        </Label>
-                                        <Label 
+                                    </Label>
+                                    <Label 
                                             Text="{Binding Capital}"
                                             TextColor="Black">
-                                        </Label>
-                                    </StackLayout>
-                                    <Image 
-                                        Grid.Column="2"
+                                    </Label>
+                                </StackLayout>
+                                <Image 
+                                        Grid.Column="1"
                                         HorizontalOptions="End" 
                                         Source="ic_chevron_right">
-                                    </Image>
-                                </Grid>
-                            </Frame>
+                                </Image>
+                            </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
