--- a/Lands/Lands/Views/LandsPage.xaml
+++ b/Lands/Lands/Views/LandsPage.xaml
@@ -3,52 +3,62 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Lands.Views.LandsPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
+             BackgroundColor="Silver"
              Title="Lands">
     <ContentPage.Content>
         <StackLayout
-            BindingContext="{Binding Lands}"
-            Padding="5">
+            BindingContext="{Binding Lands}">
             <SearchBar
+                BackgroundColor="Silver"
                 Text="{Binding Filter, Mode=TwoWay}"
                 SearchCommand="{Binding SearchCommand}"
                 Placeholder="Search...">
                 
             </SearchBar>
             <ListView
+                BackgroundColor="Silver"
                 HasUnevenRows="true" 
                 IsPullToRefreshEnabled="true"
                 IsRefreshing="{Binding IsRefreshing, Mode=TwoWay}"
                 ItemsSource="{Binding Lands}"
-                SeparatorVisibility="Default"
+                SeparatorVisibility="None"
                 RefreshCommand="{Binding RefreshCommand}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <StackLayout 
+                            <Frame
+                                CornerRadius="20"
+                                HasShadow="True"
+                                Margin="5">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding SelectLandCommand}"/>
+                                </Frame.GestureRecognizers>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <StackLayout 
                                         Grid.Column="0"
                                         VerticalOptions="Center">
-                                    <Label 
+                                        <Label 
                                             FontAttributes="Bold"
                                             FontSize="Medium" 
                                             Text="{Binding Name}"
                                             TextColor="Black">
-                                    </Label>
-                                    <Label 
+                                        </Label>
+                                        <Label 
                                             Text="{Binding Capital}"
                                             TextColor="Black">
-                                    </Label>
-                                </StackLayout>
-                                <Image 
+                                        </Label>
+                                    </StackLayout>
+                                    <Image 
                                         Grid.Column="1"
                                         HorizontalOptions="End" 
                                         Source="ic_chevron_right">
-                                </Image>
-                            </Grid>
+                                    </Image>
+                                </Grid>
+                            </Frame>                            
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
